<resources>
    <string name="app_name">NavigationViewTemp</string>
    <string name="user_name">User Name</string>
    <string name="cat_name">Cat Name</string>
    <string name="add_account">Add Account</string>
    <string name="accounts">Accounts</string>
    <string name="other_nv">Other</string>
    <string name="new_group">New Group</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="nothing_app_features">NothingApp Features</string>
    <string name="parameters">Parameters</string>
</resources>